BUGFIX Fixed newsletter send button alignment
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70671 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -192,7 +192,7 @@
 	float: left;
 }
 .right form .optionset li.submit {
-	text-align: right;
+	float: right;
 }
 
 .right form h1 {
